fix mobile spacing

--- a/less/base.less
+++ b/less/base.less
@@ -57,7 +57,7 @@ body{
 			}
 		}
 		.social{
-			padding:10px;
+			padding:0px 10px 10px 10px;
 			a{
 				font-size:24px;
 				padding:15px;
